src/styles/_ArticleTwo.scss
.article-two {
  margin: auto;
  width: 95%;
  max-width: 1920px;
  padding: 0 0 15px;

  &:before {
    background-image: url("/images/slider-background.jpg");
    content: "";
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    border-radius: 25px;
    position: absolute;
    inset: 0;
  }

  .sub-headline {
    margin-bottom: 50px;
  }

  .carousel-container {
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    gap: 15px;

    h2 {
      font-size: $text2;
      width: 95%;
      max-width: 350px;
      color: map-get($map: $colorMap, $key: "darkBlack");
      text-align: center;
      text-decoration: underline;
      text-transform: uppercase;
      text-shadow: 3px 2px map-get($map: $colorMap, $key: "purple");
      z-index: 10;

      &:before {
        content: "";
        width: 90%;
        position: absolute;
        height: 70px;
        inset: 0;
        background: map-get($map: $colorMap, $key: "white");
        margin: auto;
        z-index: -10;
        transform: rotate(-0.01turn);
      }
    }

    p {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 90%;
      height: 110px;
      font-size: $text1-15;
      color: map-get($map: $colorMap, $key: "white");
      text-align: center;
      text-transform: uppercase;
      text-shadow: 1px 2px map-get($map: $colorMap, $key: "purple");
      margin-bottom: 20px;
      z-index: 10;

      &:before {
        content: "";
        width: 100%;
        position: absolute;
        inset: 0;
        background: map-get($map: $colorMap, $key: "darkBlack");
        background: url("/images/bg-special.jpg");
        margin: auto;
        z-index: -10;
        transform: rotate(-0.01turn);
      }
    }
  }

  .carousel {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin: auto;

    .carousel__slidershow {
      width: 90%;
      max-width: 300px;
      aspect-ratio: 1 / 1;
      margin: auto;
      border-radius: 16px;
      overflow: hidden;

      .slides {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
      }
    }

    .next-button {
      top: 50%;
      right: 5px;
    }

    .prev-button {
      top: 50%;
      left: 5px;
    }

    .next-button,
    .prev-button {
      position: absolute;
      background: none;
      border: none;
      transform: translateY(-50%);
      border-radius: 50%;
      background: rgba(49, 48, 48, 0.9);
      backdrop-filter: blur(8px);
      -webkit-backdrop-filter: blur(8px);
      opacity: 0.75;
      transition: opacity 0.2s ease-in-out;
      z-index: 1;

      svg {
        font-size: $text2-75;
        color: rgb(255, 255, 255);
      }

      &:hover {
        cursor: pointer;
        opacity: 1;
      }
    }
  }
}

// -------------------------  --------- BREAKPOINT ---------------------------------- //

@media screen and (min-width: 768px) {
  .article-two {
    padding: 40px 0;

    .sub-headline {
      border-radius: 0;
    }

    .carousel-container {
      p {
        max-width: 600px;
      }
    }

    .carousel {
      .next-button {
        top: 50%;
        right: 100px;
      }

      .prev-button {
        top: 50%;
        left: 100px;
      }

      .next-button,
      .prev-button {
        svg {
          font-size: $text3;
        }
      }
    }
  }
}

// ---------------------------------- BREAKPOINT ---------------------------------- //

@media screen and (min-width: 1024px) {
  .article-two {
    .sub-headline {
      font-size: $text4;
    }

    .carousel {
      .next-button {
        top: 50%;
        right: 20%;
      }

      .prev-button {
        top: 50%;
        left: 20%;
      }
    }
  }
}

// ---------------------------------- BREAKPOINT ---------------------------------- //

@media screen and (min-width: 1400px) {
  .article-two {
    .sub-headline {
      font-size: $text5;
    }

    .carousel-container {
      p {
        max-width: 700px;
      }
    }

    .carousel {
      .next-button {
        top: 50%;
        right: 25%;
      }

      .prev-button {
        top: 50%;
        left: 25%;
      }
    }
  }
}

@media screen and (min-width: 1600px) {
  .article-two {
    .carousel {
      .next-button {
        top: 50%;
        right: 30%;
      }

      .prev-button {
        top: 50%;
        left: 30%;
      }
    }
  }
}

